# CMake-Configs

./: .clang-format  .gitignore  CMakeLists.txt  README.md
Samples/: CMakeLists.txt  boxer_sample.cpp  cxxopts_sample.cpp  doctest_sample.cpp  dxc_sample.cpp  entt_sample.cpp  glfw_sample.cpp  glm_sample.cpp
Vendors/: FindBoxer.cmake  FindCmrc.cmake  FindCxxOpts.cmake  FindD3D12.cmake  FindDocTest.cmake  FindDxc.cmake  FindEntt.cmake  FindGlm.cmake  FindGltf.cmake  FindIconFont.cmake  FindImGui.cmake  FindSPIRVCross.cmake  FindSPIRVReflect.cmake  FindSetDPI.cmake  FindSpan.cmake  FindStb.cmake  FindTinyUsdz.cmake  FindVma.cmake  FindVolk.cmake
